# slark

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  server.py
slark/: __init__.py  _constants.py  context.py  settings.py
slark/client/: _client.py  lark.py
slark/event/: event_manager.py
slark/resources/: __init__.py  _resources.py  api_path.py
slark/resources/assets/: assets.py
slark/resources/auth/: __init__.py  auth.py  token.py
slark/resources/bitable/: bitable.py  field.py  meta.py  record.py  table.py  utils.py  view.py
slark/resources/board/: board.py
slark/resources/documents/: blocks.py  documents.py  helper.py
slark/resources/drive/: drive.py  file.py
slark/resources/event/: event.py
slark/resources/knowledge_space/: knowledge_space.py  nodes.py
slark/resources/messages/: image.py  messages.py
slark/resources/sheets/: bitable.py  data.py  sheets.py  table.py  worksheet.py
slark/resources/spreadsheets/: data.py  spreadsheets.py  table.py  worksheet.py
slark/resources/webhook/: webhook.py
slark/types/: __init__.py  _common.py  _utils.py  client_types.py
slark/types/_request/: request.py
slark/types/auth/: __init__.py
slark/types/bitables/: common.py  request.py  response.py
slark/types/card/: __init__.py  base.py  behavior.py  card.py  color.py  confirm.py  header.py  icon.py  text.py  ud_icon.py
slark/types/documents/: request.py  response.py
slark/types/event/: __init__.py  callback.py  common.py  message.py  response.py
slark/types/exceptions/: _base.py  errors.py
slark/types/knowledge_space/: __init__.py
slark/types/messages/: common.py  request.py  response.py
slark/types/response/: base.py
slark/utils/: __init__.py  card_builder.py  decode.py  decrypt.py  thread.py  time.py  unit.py
tests/: conftest.py  test_bitable.py  test_document.py  test_image.py  test_sheets.py  test_webook.py  test_webook_client.py
(+55 files in other folders)
