[tool.poetry]
name = "slark"
version = "0.0.0"
description = "# SLARK Simple LARK(Feishu) SDK"
authors = ["HSPK <whxway@whu.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">2"
httpx = "^0.27.0"
loguru = "^0.7.2"
arrow = "^1.3.0"
pandas = "^2.0.3"
numpy = "<2"
Pillow = "^10.4.0"
requests-toolbelt = "^1.0.0"


[tool.poetry.group.test.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
pytest = "^8.3.2"
anyio = "^4.4.0"
trio = "^0.26.0"
python-dotenv = "1.0.0"
pytest-asyncio = "^0.23.8"




[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.5.0,<3.6.0"
ruff = "^0.5.5"

[[tool.poetry.source]]
name = "mirror"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"